--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,10 @@
-[submodule "zsh/plugins/oh-my-zsh"]
-	path = zsh/plugins/oh-my-zsh
-	url = https://github.com/robbyrussell/oh-my-zsh.git
 [submodule "zsh/plugins/zsh-syntax-highlighting"]
 	path = zsh/plugins/zsh-syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
+[submodule "vim/plugins/fzf.vim"]
+	path = vim/plugins/fzf.vim 
+	url = https://github.com/junegunn/fzf.vim.git 
+
+[submodule "zsh/plugins/oh-my-zsh"]
+	path = zsh/plugins/oh-my-zsh
+	url = https://github.com/robbyrussell/oh-my-zsh.git
