--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,7 +24,7 @@ bind k select-pane -U
 bind l select-pane -R
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
-
+bind C-x confirm-before -p "kill-window #W? (y/n)" kill-window
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
 set-window-option -g pane-base-index 1
