Improve tmux conf sourcing and reloading

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,8 @@ bind C-t send-prefix
 
 # force a reload of the config file
 unbind r
-bind r source-file ~/.tmux.conf
+#bind r source-file ~/.tmux.conf
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 # quick pane cycling
 unbind ^A
@@ -24,7 +25,9 @@ bind k select-pane -U
 bind l select-pane -R
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
+
 bind C-x confirm-before -p "kill-window #W? (y/n)" kill-window
+
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
 set-window-option -g pane-base-index 1
