Try out new tmux settings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,7 @@
+# copied from various sources, mostly:
+# https://github.com/chrishunt/dot-files/blob/master/.tmux.conf
+# https://github.com/chrishunt/dot-files/blob/master/.tmux.conf
+
 set -g prefix C-t
 unbind C-b
 bind C-t send-prefix
@@ -11,9 +15,12 @@ bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 unbind ^A
 bind ^A select-pane -t :.+
 
-set -s escape-time 0
+# set -s escape-time 0
+set -sg escape-time 1
 
-# https://github.com/thoughtbot/dotfiles/blob/master/tmux.conf
+# increase repeat time for repeatable commands
+set -g repeat-time 1000
+
 # improve colors
 set -g default-terminal 'screen-256color'
 
@@ -35,13 +42,48 @@ set-window-option -g pane-base-index 1
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
 
+# highlight window when it has new activity
+setw -g monitor-activity on
+set -g visual-activity on
+
+# set refresh interval for status bar
+set -g status-interval 30
+
 # soften status bar color from harsh green to light gray
-set -g status-bg '#666666'
-set -g status-fg '#aaaaaa'
+#set -g status-bg '#666666'
+#set -g status-fg '#aaaaaa'
 
 # remove administrative debris (session name, hostname, time) in status bar
-set -g status-left ''
-set -g status-right ''
+#set -g status-left ''
+#set -g status-right ''
+# show hostname, date, time, and battery in right status bar
+set-option -g status-right '#[fg=green]#H#[default] %d.%m. %H:%M\
+ #[fg=red]#(battery discharging)#[default]#(battery charging)'
 
 # increase scrollback lines
 set -g history-limit 10000
+
+###########################
+# Colors
+###########################
+
+# color status bar
+set -g status-bg colour235
+set -g status-fg white
+
+# highlight current window
+set-window-option -g window-status-current-fg black
+set-window-option -g window-status-current-bg green
+
+# set color of active pane
+set -g pane-border-fg colour235
+set -g pane-border-bg black
+set -g pane-active-border-fg green
+set -g pane-active-border-bg black
+
+###########################
+# Preserve Working Dir
+###########################
+bind % split-window -h -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
