--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,9 +21,6 @@ set -sg escape-time 1
 # increase repeat time for repeatable commands
 set -g repeat-time 1000
 
-# improve colors
-set -g default-terminal 'screen-256color'
-
 # act like vim
 setw -g mode-keys vi
 bind h select-pane -L
@@ -66,20 +63,22 @@ set -g history-limit 10000
 ###########################
 # Colors
 ###########################
+# improve colors
+set -g default-terminal "screen-256color"
 
 # color status bar
 set -g status-bg colour235
 set -g status-fg white
-
-# highlight current window
-set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-bg green
 
 # set color of active pane
 set -g pane-border-fg colour235
 set -g pane-border-bg black
 set -g pane-active-border-fg green
 set -g pane-active-border-bg black
+
+# highlight current window
+set-window-option -g window-status-current-fg black
+set-window-option -g window-status-current-bg green
 
 ###########################
 # Preserve Working Dir
