--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,10 @@
 # copied from various sources, mostly:
+# https://github.com/thoughtbot/dotfiles/blob/master/tmux.conf
 # https://github.com/chrishunt/dot-files/blob/master/.tmux.conf
-# https://github.com/chrishunt/dot-files/blob/master/.tmux.conf
+# https://github.com/chrishunt/color-schemes
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-battery'
 
 set -g prefix C-t
 unbind C-b
@@ -54,8 +58,7 @@ set -g status-interval 30
 #set -g status-left ''
 #set -g status-right ''
 # show hostname, date, time, and battery in right status bar
-set-option -g status-right '#[fg=green]#H#[default] %d.%m. %H:%M\
- #[fg=red]#(battery discharging)#[default]#(battery charging)'
+set-option -g status-right '#H #{battery_status_fg}#{battery_percentage}#[default] %H:%M'
 
 # increase scrollback lines
 set -g history-limit 10000
@@ -86,3 +89,6 @@ set-window-option -g window-status-current-bg green
 bind % split-window -h -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
