--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,10 +50,6 @@ set -g visual-activity on
 # set refresh interval for status bar
 set -g status-interval 30
 
-# soften status bar color from harsh green to light gray
-#set -g status-bg '#666666'
-#set -g status-fg '#aaaaaa'
-
 # remove administrative debris (session name, hostname, time) in status bar
 #set -g status-left ''
 #set -g status-right ''
@@ -76,8 +72,13 @@ set -g status-fg white
 # set color of active pane
 set -g pane-border-fg colour235
 set -g pane-border-bg black
+ 
 set -g pane-active-border-fg green
 set -g pane-active-border-bg black
+
+#set inactive/active window styles
+set -g window-style 'fg=colour235,bg=colour232'
+set -g window-active-style 'fg=white,bg=colour235'
 
 # highlight current window
 set-window-option -g window-status-current-fg black
