--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,7 @@
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set -g prefix C-t
 unbind C-b
