Add color schemes as git submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,4 +10,4 @@
 	url = https://github.com/robbyrussell/oh-my-zsh.git
 [submodule "color-schemes"]
 	path = color-schemes
-	url = https://github.com/chrishunt/color-schemes.git
+	url = https://github.com/chrishunt/color-schemes
