--- a/.tigrc
+++ b/.tigrc
@@ -1,3 +1,4 @@
 bind status a !git commit --amend
 bind status p !git push origin
 bind status [ !?git push origin --force
+bind status D !?rm %(file)
