--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,10 +3,6 @@
 # https://github.com/chrishunt/dot-files/blob/master/.tmux.conf
 # https://github.com/chrishunt/color-schemes
 
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-
 set -g prefix C-t
 unbind C-b
 bind C-t send-prefix
@@ -64,7 +60,8 @@ set -g history-limit 10000
 # Colors
 ###########################
 # improve colors
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ',xterm-256color:Tc'
 
 # color status bar
 set -g status-bg colour235
@@ -73,7 +70,7 @@ set -g status-fg white
 # set color of active pane
 set -g pane-border-fg colour235
 set -g pane-border-bg black
- 
+
 set -g pane-active-border-fg green
 set -g pane-active-border-bg black
 
@@ -91,6 +88,10 @@ set-window-option -g window-status-current-bg green
 bind % split-window -h -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
