Add keybinding to get window into split pane

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -89,6 +89,9 @@ bind % split-window -h -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
+# pane movement
+bind-key z command-prompt -p "join pane from:"  "join-pane -s '%%'"
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'christoomey/vim-tmux-navigator'
