Add binding to move tmux windows

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,8 +28,11 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
+bind-key -r H select-window -t :-
+bind-key -r L select-window -t :+
+
+bind-key C-h swap-window -t -1
+bind-key C-l swap-window -t +1
 
 bind C-x confirm-before -p "kill-window #W? (y/n)" kill-window
 
