--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,11 +28,27 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+# iterm cmd + h sends hex code 0x14 0x70
+# iterm cmd + h sends hex code 0x14 0x6E
 bind-key -r H select-window -t :-
 bind-key -r L select-window -t :+
 
+# iterm alt + cmd + h sends hex code 0x14 0x08
+# iterm alt + cmd + l sends hex code 0x14 0x0C
 bind-key C-h swap-window -t -1
 bind-key C-l swap-window -t +1
+
+# switch windows alt+number
+bind-key -n M-1 select-window -t 1
+bind-key -n M-2 select-window -t 2
+bind-key -n M-3 select-window -t 3
+bind-key -n M-4 select-window -t 4
+bind-key -n M-5 select-window -t 5
+bind-key -n M-6 select-window -t 6
+bind-key -n M-7 select-window -t 7
+bind-key -n M-8 select-window -t 8
+bind-key -n M-9 select-window -t 9
 
 bind C-x confirm-before -p "kill-window #W? (y/n)" kill-window
 
