Add script for interactive master rebase
I frequently rebase branches onto the current master.

This adds a custom git script that fetches the master and then performs
an interactive rebase.

Please note that the fetching will only work if the changes in the
master branch are fast-forwardable.

Bound to M in the tig main view.

--- a/.tigrc
+++ b/.tigrc
@@ -2,3 +2,5 @@ bind status a !git commit --amend
 bind status p !git push origin
 bind status \ !?git push origin --force
 bind status D !?rm %(file)
+# Custom script to fetch the master branch and then do an interactive rebase on it
+bind main M !git rebase-fetched-master
