Add iterm hex codes for tmux navigation bindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,7 +30,7 @@ bind k select-pane -U
 bind l select-pane -R
 
 # iterm cmd + h sends hex code 0x14 0x70
-# iterm cmd + h sends hex code 0x14 0x6E
+# iterm cmd + l sends hex code 0x14 0x6E
 bind-key -r H select-window -t :-
 bind-key -r L select-window -t :+
 
