--- a/tmux.conf
+++ b/tmux.conf
@@ -66,14 +66,14 @@ set -g visual-activity on
 # set refresh interval for status bar
 set -g status-interval 30
 
-# remove administrative debris (session name, hostname, time) in status bar
-#set -g status-left ''
-#set -g status-right ''
 # show hostname, date, time, and battery in right status bar
 set-option -g status-right '#H #{battery_status_fg}#{battery_percentage}#[default] %H:%M'
 
 # increase scrollback lines
 set -g history-limit 10000
+
+# Hide Session name
+set -g status-left ''
 
 ###########################
 # Colors
@@ -90,7 +90,7 @@ set -g status-fg white
 set -g pane-border-fg colour235
 set -g pane-border-bg black
 
-set -g pane-active-border-fg green
+set -g pane-active-border-fg colour114
 set -g pane-active-border-bg black
 
 #set inactive/active window styles
@@ -99,7 +99,7 @@ set -g window-active-style 'fg=white,bg=colour235'
 
 # highlight current window
 set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-bg green
+set-window-option -g window-status-current-bg colour114
 
 ###########################
 # Preserve Working Dir
