Enable pane titles in one tmux window
This shows the pane title for the docker window. Previously, it was not
clear which environment was displayed in the panes.

Using the `pre` and `pre_window` hooks somehow didn't work as expected.
But tmux accepts targets via the -t parameter, so using the docker window
as target works fine.

--- a/tmuxinator/zimpel.yml
+++ b/tmuxinator/zimpel.yml
@@ -50,6 +50,10 @@ windows:
   - docker:
       layout: main-vertical
       panes:
-        - bin/compose dev up
-        - bin/compose test up
+        - dev:
+          # Enable pane titles for this window only
+          - tmux set -t zimpel:docker pane-border-status bottom
+          - bin/compose dev up
+        - test:
+          - bin/compose test up
   - webpack: yarn serve
