--- a/tmux.conf
+++ b/tmux.conf
@@ -111,9 +111,11 @@ bind c new-window -c "#{pane_current_path}"
 # pane movement
 bind-key z command-prompt -p "join pane from:"  "join-pane -s '%%'"
 
+# Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin "p-becker/tmux-safekill"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
