Enable mouse in tmux
Don't tell anyone

--- a/tmux.conf
+++ b/tmux.conf
@@ -71,6 +71,9 @@ set -g history-limit 10000
 # Hide Session name
 set -g status-left ''
 
+# Using the mouse can be nice sometimes
+set -g mouse on
+
 ###########################
 # Colors
 ###########################
