Show keyboard language instead of hostname
To do: Trigger manual refresh instead of shortening the automatic update
interval.

--- a/tmux.conf
+++ b/tmux.conf
@@ -60,10 +60,10 @@ setw -g monitor-activity on
 set -g visual-activity on
 
 # set refresh interval for status bar
-set -g status-interval 30
+set -g status-interval 5
 
-# show hostname, date, time, and battery in right status bar
-set-option -g status-right '#H #{battery_status_fg}#{battery_percentage}#[default] %H:%M'
+# show keyboard language, date, time, and battery in right status bar
+set-option -g status-right "#(osascript -e 'tell application \"System Events\" to tell process \"SystemUIServer\" to get the value of the first menu bar item of menu bar 1 whose description is \"text input\"') #{battery_status_fg}#{battery_percentage}#[default] %H:%M"
 
 # increase scrollback lines
 set -g history-limit 10000
