--- a/tmuxinator/zimpel.yml
+++ b/tmuxinator/zimpel.yml
@@ -46,7 +46,11 @@ windows:
   - vim: nvim
   - tig: tig
   - server: bundle exec rails s
-  - console: bundle exec rails c
+  - console: 
+    # Explicitely start a spring server in the background.
+    # Neovim currently runs the tests in a new terminal. When that terminates, it kills spring, too.
+    - ( bin/spring server > /dev/null 2>&1 & )
+    - bundle exec rails c
   - docker:
       layout: main-vertical
       panes:
