WIP replace iterm2 switcher with tmux
TODO
tmux send keys F12?
majesticuser color scheme

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,109 +1,1 @@
-# copied from various sources, mostly:
-# https://github.com/thoughtbot/dotfiles/blob/master/tmux.conf
-# https://github.com/chrishunt/dot-files/blob/master/.tmux.conf
-# https://github.com/chrishunt/color-schemes
-
-# force a reload of the config file
-unbind r
-#bind r source-file ~/.tmux.conf
-bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
-
-# quick pane cycling
-unbind ^A
-bind ^A select-pane -t :.+
-
-# set -s escape-time 0
-set -sg escape-time 1
-
-# increase repeat time for repeatable commands
-set -g repeat-time 1000
-
-# act like vim
-setw -g mode-keys vi
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-# iterm cmd + h sends hex code 0x14 0x70
-# iterm cmd + l sends hex code 0x14 0x6E
-bind-key -r H select-window -t :-
-bind-key -r L select-window -t :+
-
-# iterm alt + cmd + h sends hex code 0x14 0x08
-# iterm alt + cmd + l sends hex code 0x14 0x0C
-bind-key C-h swap-window -t -1
-bind-key C-l swap-window -t +1
-
-bind C-x confirm-before -p "kill-window #W? (y/n)" kill-window
-
-# start window numbers at 1 to match keyboard order with tmux window order
-set -g base-index 1
-set-window-option -g pane-base-index 1
-
-# renumber windows sequentially after closing any of them
-set -g renumber-windows on
-
-# highlight window when it has new activity
-setw -g monitor-activity on
-set -g visual-activity on
-
-# set refresh interval for status bar
-set -g status-interval 5
-
-# show keyboard language, date, time, and battery in right status bar
-set-option -g status-right "#(osascript -e 'tell application \"System Events\" to tell process \"SystemUIServer\" to get the value of the first menu bar item of menu bar 1 whose description is \"text input\"') #{battery_status_fg}#{battery_percentage}#[default] %H:%M"
-
-# increase scrollback lines
-set -g history-limit 10000
-
-# Hide Session name
-set -g status-left ''
-
-# Using the mouse can be nice sometimes
-set -g mouse on
-
-###########################
-# Colors
-###########################
-# improve colors
-set -g default-terminal "xterm-256color"
-set -ga terminal-overrides ',xterm-256color:Tc'
-
-# color status bar
-set -g status-bg colour235
-set -g status-fg white
-
-# set color of active pane
-set -g pane-border-fg colour235
-set -g pane-border-bg black
-
-set -g pane-active-border-fg colour114
-set -g pane-active-border-bg black
-
-#set inactive/active window styles
-set -g window-style 'fg=colour235,bg=colour232'
-set -g window-active-style 'fg=white,bg=colour235'
-
-# highlight current window
-set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-bg colour114
-
-###########################
-# Preserve Working Dir
-###########################
-bind % split-window -h -c "#{pane_current_path}"
-bind '"' split-window -c "#{pane_current_path}"
-bind c new-window -c "#{pane_current_path}"
-
-# pane movement
-bind-key z command-prompt -p "join pane from:"  "join-pane -s '%%'"
-
-# Plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin "p-becker/tmux-safekill"
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+tmux/p-becker.conf
