WIP fix pairing script with tmux

--- a/tmux/majesticuser.conf
+++ b/tmux/majesticuser.conf
@@ -1,32 +1,48 @@
-# default statusbar colors
-#set-option -g status-bg white #base2
-#set-option -g status-fg yellow #yellow
-#set-option -g status-attr default
+set -g default-command "reattach-to-user-namespace -l bash"
+set -g default-terminal "screen-256color"
 
-# default window title colors
-#set-window-option -g window-status-fg brightyellow #base00
-#set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
+set -s escape-time 0
 
-# active window title colors
-#set-window-option -g window-status-current-fg brightred #orange
-#set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
+# ----------- #
+# Keybindings #
+# ----------- #
 
-#set inactive/active window styles
+unbind C-b
+
+# Set a more ergonomic prefix key
+set -g prefix C-q
+
+bind-key C-q last-window
+
+# ------------ #
+# Copy & paste #
+# ------------ #
+
+# http://robots.thoughtbot.com/tmux-copy-paste-on-os-x-a-better-future
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# FIXME Following lines throw errors:
+# /Users/virginio/.tmux.conf:24: invalid or unknown command: bind-key -t vi-copy v begin-selection                                
+# /Users/virginio/.tmux.conf:25: invalid or unknown command: bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# /Users/virginio/.tmux.conf:28: invalid or unknown command: unbind -t vi-copy Enter
+# /Users/virginio/.tmux.conf:29: invalid or unknown command: bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy
+
+# Setup 'v' to begin selection as in Vim
+# bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+# unbind -t vi-copy Enter
+# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+# ----------------------- #
+# Window and pane indices #
+# ----------------------- #
+
+set -g base-index 1
+setw -g pane-base-index 1
+
+## Improve colors
 set -g window-style 'fg=colour7,bg=colour15'
 set -g window-active-style 'fg=black,bg=white'
-# pane border
-#set-option -g pane-border-fg white #base2
-#set-option -g pane-active-border-fg brightcyan #base1
-
-# message text
-#set-option -g message-bg white #base2
-#set-option -g message-fg brightred #orange
-
-# pane number display
-#set-option -g display-panes-active-colour blue #blue
-#set-option -g display-panes-colour brightred #orange
-
-# clock
-#set-window-option -g clock-mode-colour green #green
