Add bind to switch language with status update
This switches the input language and immediately updates the tmux status
line. This is useful when switching the driver while pairing.

I didn't lower the refresh interval for the status line because that
comes with an observable increase in CPU usage.

--- a/tmux/p-becker.conf
+++ b/tmux/p-becker.conf
@@ -37,6 +37,8 @@ bind-key C-l swap-window -t +1
 
 bind C-x confirm-before -p "kill-window #W? (y/n)" kill-window
 
+bind-key -n C-F12 run "./scripts/switch_input_language.sh"
+
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
 set-window-option -g pane-base-index 1
