Improve colors in tmux

--- a/tmux/p-becker.conf
+++ b/tmux/p-becker.conf
@@ -69,25 +69,25 @@ set -g mouse on
 # Colors
 ###########################
 # improve colors
-set -g default-terminal "xterm-256color"
-set -ga terminal-overrides ',xterm-256color:Tc'
+set -g default-terminal 'tmux-256color'
+set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 
 # color status bar
-set -g status-bg colour235
+set -g status-bg black
 set -g status-fg white
 
 # set color of active pane
-set -g pane-border-fg colour235
-set -g pane-border-bg black
+#set -g pane-border-fg colour235
+#set -g pane-border-bg black
 
-set -g pane-active-border-fg colour114
-set -g pane-active-border-bg black
+#set -g pane-active-border-fg colour114
+#set -g pane-active-border-bg black
 
-#set inactive/active window styles
-set -g window-style 'fg=colour235,bg=colour232'
-set -g window-active-style 'fg=white,bg=colour235'
+##set inactive/active window styles
+#set -g window-style 'fg=colour235,bg=colour232'
+#set -g window-active-style 'fg=white,bg=colour235'
 
-# highlight current window
+## highlight current window
 set-window-option -g window-status-current-fg black
 set-window-option -g window-status-current-bg colour114
 
