--- a/alacritty.yml
+++ b/alacritty.yml
@@ -12,6 +12,7 @@ env:
   # You can verify this by checking for the presence of `smso` and `sitm` in
   # `infocmp xterm-256color`.
   TERM: xterm-256color
+  COLORTERM: truecolor
 
 window:
   # Window dimensions in character columns and lines
