--- a/alacritty.yml
+++ b/alacritty.yml
@@ -275,6 +275,8 @@ key_bindings:
   - { key: L,        mods: Command,     chars: "\x02\x6E"                    }
   - { key: H,        mods: Command|Alt, chars: "\x02\x08"                    }
   - { key: L,        mods: Command|Alt, chars: "\x02\x0C"                    }
+  - { key: H,        mods: Alt,         chars: "\x1bh"                       }
+  - { key: L,        mods: Alt,         chars: "\x1bl"                       }
   - { key: V,        mods: Command,     action: Paste                        }
   - { key: C,        mods: Command,     action: Copy                         }
   - { key: Paste,                       action: Paste                        }
