--- a/tmux/p-becker.conf
+++ b/tmux/p-becker.conf
@@ -101,6 +101,40 @@ bind c new-window -c "#{pane_current_path}"
 # pane movement
 bind-key z command-prompt -p "join pane from:"  "join-pane -s '%%'"
 
+# --------------------------------
+# Turn on the Mouse Support - defaults seem good
+# --------------------------------
+# when we finish "selecting" send it to pbcopy (and into the OS X buffer)
+#bind-key vi-copy MouseDragEnd1Pane copy-pipe "pbcopy" -t
+
+# --------------------------------
+# Use vim keybindings in copy mode
+# --------------------------------
+setw -g mode-keys vi
+
+# Setup 'v' to begin selection as in Vim
+# You enter with C-b [ and then "v" - then normal keypresses to "highlight"
+# .. [Enter] or "y" will select (because of below bindings)
+bind-key vi-copy v begin-selection -t
+#
+# 'y'ank will send the selection to the OS X buffer
+#bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+bind-key vi-copy y            copy-pipe "pbcopy" -t
+
+# --------------------------------
+# Update default binding of `Enter` to also use Send the selection to OS X buffer
+# --------------------------------
+#unbind-key vi-copy Enter
+#bind-key vi-copy Enter        copy-pipe "pbcopy" -t
+
+# selecting can now be done with
+#  hilighting with a mouse
+#  selecting with C-b [ v .. now vi mode for selecting text
+#
+# pasting  can now be done with
+# ⌘ - V
+# C-b ]
+#
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-battery'
