Switch to next active tmux session on exit

--- a/tmux/p-becker.conf
+++ b/tmux/p-becker.conf
@@ -135,6 +135,10 @@ bind-key vi-copy y            copy-pipe "pbcopy" -t
 # ⌘ - V
 # C-b ]
 #
+
+# Switch to next active session when session is destroyed (don't leave tmux)
+set-option -g detach-on-destroy off
+
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-battery'
