--- a/tmux/p-becker.conf
+++ b/tmux/p-becker.conf
@@ -13,7 +13,7 @@ unbind ^A
 bind ^A select-pane -t :.+
 
 # set -s escape-time 0
-set -sg escape-time 1
+set -g escape-time 1
 
 # increase repeat time for repeatable commands
 set -g repeat-time 1000
@@ -54,7 +54,7 @@ set -g visual-activity on
 set -g status-interval 5
 
 # show keyboard language, date, time, and battery in right status bar
-set-option -g status-right "#(osascript -e 'tell application \"System Events\" to tell process \"SystemUIServer\" to get the value of the first menu bar item of menu bar 1 whose description is \"text input\"') #{battery_status_fg}#{battery_percentage}#[default] %H:%M"
+set-option -g status-right "#(osascript -e 'tell application \"System Events\" to tell process \"SystemUIServer\" to get the value of the first menu bar item of menu bar 1 whose description is \"text input\"') #{battery_status_fg}#{battery_percentage}#[default] #(tmux_timer show) %H:%M"
 
 # increase scrollback lines
 set -g history-limit 10000
@@ -99,7 +99,7 @@ bind '"' split-window -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
 # pane movement
-bind-key z command-prompt -p "join pane from:"  "join-pane -s '%%'"
+bind-key J command-prompt -p "join pane from:"  "join-pane -s '%%'"
 
 # --------------------------------
 # Turn on the Mouse Support - defaults seem good
@@ -110,16 +110,16 @@ bind-key z command-prompt -p "join pane from:"  "join-pane -s '%%'"
 # --------------------------------
 # Use vim keybindings in copy mode
 # --------------------------------
-setw -g mode-keys vi
+#setw -g mode-keys vi
 
 # Setup 'v' to begin selection as in Vim
 # You enter with C-b [ and then "v" - then normal keypresses to "highlight"
 # .. [Enter] or "y" will select (because of below bindings)
-bind-key vi-copy v begin-selection -t
+#bind-key vi-copy v begin-selection -t
 #
 # 'y'ank will send the selection to the OS X buffer
 #bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
-bind-key vi-copy y            copy-pipe "pbcopy" -t
+#bind-key vi-copy y            copy-pipe "pbcopy" -t
 
 # --------------------------------
 # Update default binding of `Enter` to also use Send the selection to OS X buffer
