Update tmux colors

--- a/tmux/p-becker.conf
+++ b/tmux/p-becker.conf
@@ -73,8 +73,7 @@ set -g default-terminal 'tmux-256color'
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 
 # color status bar
-set -g status-bg black
-set -g status-fg white
+set -g status-style fg=white,bg=black
 
 # set color of active pane
 #set -g pane-border-fg colour235
@@ -87,9 +86,8 @@ set -g status-fg white
 #set -g window-style 'fg=colour235,bg=colour232'
 #set -g window-active-style 'fg=white,bg=colour235'
 
-## highlight current window
-set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-bg colour114
+# highlight current window
+set-window-option -g window-status-current-style fg=black,bg=colour114
 
 ###########################
 # Preserve Working Dir
