--- a/tmux/p-becker.conf
+++ b/tmux/p-becker.conf
@@ -12,9 +12,7 @@ bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 unbind ^A
 bind ^A select-pane -t :.+
 
-# set -s escape-time 0
-set -g escape-time 1
-
+set -sg escape-time 1
 # increase repeat time for repeatable commands
 set -g repeat-time 1000
 
@@ -36,8 +34,6 @@ bind-key C-h swap-window -t -1
 bind-key C-l swap-window -t +1
 
 bind C-x confirm-before -p "kill-window #W? (y/n)" kill-window
-
-bind-key -n C-F12 run "./scripts/switch_input_language.sh"
 
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
@@ -141,7 +137,7 @@ set-option -g detach-on-destroy off
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin "p-becker/tmux-safekill"
+#set -g @plugin "p-becker/tmux-safekill"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
