Change tmux windows navigation bindings

--- a/tmux/p-becker.conf
+++ b/tmux/p-becker.conf
@@ -18,15 +18,15 @@ set -g repeat-time 1000
 
 # act like vim
 setw -g mode-keys vi
-bind h select-pane -L
+bind H select-pane -L
 bind j select-pane -D
 bind k select-pane -U
-bind l select-pane -R
+bind L select-pane -R
 
 # iterm cmd + h sends hex code 0x14 0x70
 # iterm cmd + l sends hex code 0x14 0x6E
-bind-key -r H select-window -t :-
-bind-key -r L select-window -t :+
+bind-key -r h select-window -t :-
+bind-key -r l select-window -t :+
 
 # iterm alt + cmd + h sends hex code 0x14 0x08
 # iterm alt + cmd + l sends hex code 0x14 0x0C
