--- a/zsh/.zpreztorc
+++ b/zsh/.zpreztorc
@@ -26,6 +26,8 @@ zstyle ':prezto:*:*' color 'yes'
 
 # Set the Prezto modules to load (browse modules).
 # The order matters.
+  # SLOW!!!
+  #'syntax-highlighting' \
 zstyle ':prezto:load' pmodule \
   'environment' \
   'terminal' \
@@ -36,7 +38,6 @@ zstyle ':prezto:load' pmodule \
   'utility' \
   'completion' \
   'git' \
-  'syntax-highlighting' \
   'prompt'
 
 #
