--- a/tmux/p-becker.conf
+++ b/tmux/p-becker.conf
@@ -95,6 +95,9 @@ bind c new-window -c "#{pane_current_path}"
 # pane movement
 bind-key J command-prompt -p "join pane from:"  "join-pane -s '%%'"
 
+# clear screen
+bind -n C-k send-keys -R \; clear-history
+
 # --------------------------------
 # Turn on the Mouse Support - defaults seem good
 # --------------------------------
