Enable bell from other window

--- a/tmux/p-becker.conf
+++ b/tmux/p-becker.conf
@@ -44,7 +44,8 @@ set -g renumber-windows on
 
 # highlight window when it has new activity
 setw -g monitor-activity on
-set -g visual-activity on
+#set -g visual-activity on
+set-window-option -g bell-action other
 
 # set refresh interval for status bar
 set -g status-interval 5
